[Revise File] minor revise

--- a/tmux.conf
+++ b/tmux.conf
@@ -9,6 +9,9 @@ bind k select-pane -U
 bind l select-pane -R
 bind-key r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded"
 
+# set shell to bash
+set-option -g default-shell /usr/local/bin/bash
+
 # open new window with current directory
 bind '"' split-window -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
