[tmux] set mouse on

--- a/tmux.conf
+++ b/tmux.conf
@@ -18,3 +18,6 @@ bind c new-window -c "#{pane_current_path}"
 
 # join pane
 bind @ join-pane -h -s !
+
+# use mouse to resize or select pane
+set -g mouse on
