[Revise] bash tmux vim

--- a/tmux.conf
+++ b/tmux.conf
@@ -15,6 +15,7 @@ bind-key r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded"
 bind '"' split-window -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
 bind c new-window -c "#{pane_current_path}"
+bind i new-window -a -c "#{pane_current_path}"
 
 # join pane
 bind @ join-pane -h -s !
